2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (spring_trap, interpolate_string)
	(interpolate_string_with_args): Improve error diagnostics: when
	a sprung trap or an interpolation fails because it's being
	attempted on a request, say so explicitly and _name_ it.  If the
	argument to the trap-planting request or to a string
	interpolation escape sequence is itself an interpolation, this
	name might not be obvious.  Consider:
	  .wh \n[pos] \*[mac]
	  .em \*[mac]
	  .itc 1 \*[mac]
	  \*[\*[mac]]
	Supplying this information requires no additional overhead.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (interpolate_string): Trivially
	refactor.  Rename function parameter from `s` to `nm` to more
	obviously align with `interpolate_string_with_args()`.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (do_zero_width, token::description)
	(interpolate_string, interpolate_string_with_args)
	(token::get_char): Revise diagnostic messages to stop presuming
	the identity of the escape character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (set_escape_char): Recast error
	message to describe attempted operation and tell the user what
	we're doing about being instructed to use an invalid escape
	character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_size): Be more helpful to
	ambiguous type size escape sequence users; offer advice in
	terms of the current escape character.

2022-09-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Fix SEGV when exiting
	gxditview.  The `postdriver` pointer always referred to
	allocated memory except when the `-X` option was given; it was
	then assigned the address of a #defined string literal.  It was
	thus statically allocated and an error to attempt to `free()`